priv/public/main.css
:root {
  --light-blue: #edf2fb;
  --black: #343434;

  --blue: #a0c4ff;
  --green: #a5febc;
  --orange: #ffd6a5;
  --purple: #bdb2ff;

  --light: var(--light-blue);
  --dark: var(--black);
}

@media (prefers-color-scheme: dark) {
  :root {
    --dark: var(--light-blue);
    --light: var(--black);
  }
}

html {
  background-color: var(--light);
}
.hidden {
  display: none !important;
}
main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 100px;
  position: relative;
}

main[data-vote]:after {
  font-size: 400px;
  content: attr(data-vote);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  animation: fade-away .5s;
  z-index: 2;
  opacity: 0%;
  pointer-events: none;
}

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--dark);
  margin: 1em;
}

h1, h2, h3 {
  margin: 0;
  padding: 0;
}

h1 {
  font-weight: 900;
  font-size: 52px;
}

.buttons {
  display: flex;
  gap: 1em;
  align-items: center;
}

* {
  box-sizing: border-box;
}

@font-face {
  font-family: "NationalPark";
  src: url("/public/NationalPark-VariableVF.woff2") format("woff2");
}

body {
  font-family: NationalPark;
}

.vote_card {
  position: relative;
  z-index: 1;
  border-radius: 8px;
  text-align: center;
  font-size: 36px;
  font-weight: bold;
  perspective: 1000px;
  transition: transform 0.8s;
  transform-style: preserve-3d;
  display: grid;
  width: 125px;
  height: 175px;
}

.hidden_vote.vote_card {
  transform: rotateY(180deg);
}

#room_button::before {
	content: "Create a room to start:";
	font-size: 16px;
	position: absolute;
	top: -28px;
	left: 0;
	font-weight: bold;
}

.front, .back {
  border-radius: 8px;
  display: grid;
  grid-template-areas: "tl tm tr"
                       "ml mm mr"
                       "bl bm br";
  position: relative;
  background-color: var(--blue);
  grid-area: 1/-1;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  border: 2px solid var(--black);
}

.tl, .tr, .m, .bl, .br {
  display: grid;
  align-content: center;
}
.tl, .tr, .bl, .br {
  font-size: 16px;
}

.tl {
  grid-area: tl;
}
.tr {
  grid-area: tr;
}
.m {
  grid-area: mm;
}
.bl {
  grid-area: bl;
}
.br {
  grid-area: br;
}

.back {
  transform: rotateY(180deg);
  background-color: var(--purple);
}

.winner {
  background-color: var(--green);
}

.my_vote, .my_vote .front {
  background-color: var(--green);
}
.my_vote .back {
  visibility: hidden;
}
.my_vote:before, #stats:before {
  position: absolute;
  top: -36px;
  font-size: 24px;
  font-weight: bold;
}
.my_vote:before {
  content: "Your Vote:";
}
.vote_option:hover {
  cursor: pointer;
}

#voting_area, #vote_area {
  display: inline-flex;
  gap: 2em;
  margin: 3em 0;
  flex-wrap: wrap;
}

#stats {
  display: inline-flex;
  position: relative;
  flex-direction: column;
  font-weight: bold;
  margin-left: 2em;
  font-size: 2em;
}

#stats h3 {
  font-size: 1.5em;
}

button {
  align-items: center;
  background-color: var(--orange);
  border: 2px solid var(--black);
  border-radius: 8px;
  color: var(--black);
  cursor: pointer;
  display: inline-flex;
  font-size: 24px;
  height: 48px;
  justify-content: center;
  line-height: 24px;
  padding: 16px 24px;
  position: relative;
  text-align: center;
  text-decoration: none;
}

button:after, .front:after, .toggle [type="checkbox"]:after {
  background-color: var(--dark);
  border-radius: 8px;
  content: "";
  display: block;
  height: 100%;
  left: 0;
  width: 100%;
  position: absolute;
  top: -2px;
  transform: translate(8px, 8px);
  transition: transform .2s ease-out;
  z-index: -1;
}

button:hover:after, .toggle [type="checkbox"]:hover:after {
  transform: translate(2px, 2px);
}

.front:hover:after, .back:hover:after {
  transform: translate(2px, 4px);
}

button:active {
  background-color: #ffdeda;
  outline: 0;
}

button:hover {
  outline: 0;
}

.toggle div {
  position: absolute;
  top: -20px;
  font-weight: 600;
}

.toggle [type="checkbox"] {
  appearance: none;
  position: relative;
  height: 48px;
  width: 200px;
  perspective: 1000px;
  transform: preserve-3d;
  transition: transform .2s ease-out;
  backface-visibility: none;
  cursor: pointer;
}
.toggle [type="checkbox"]:before {
  content: "Voter";
  font-size: 24px;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
  border-radius: 8px;
  border: 2px solid var(--black);
}
.toggle [type="checkbox"]:not(:checked) {
  animation: unflip-toggle .5s;
}
.toggle [type="checkbox"]:not(:checked):before {
  background-color: var(--blue);
}
.toggle [type="checkbox"]:checked:before {
  background-color: var(--green);
}
.toggle [type="checkbox"]:checked {
  animation: flip-toggle .5s;
}
.toggle [type="checkbox"]:checked:before {
  content: "Spectator";
}

@keyframes flip-toggle {
  0% {
    opacity: 0%;
  }

  100% {
    transform: rotateY(180deg) scale(-1, 1);
    opacity: 100%;
  }
}

@keyframes unflip-toggle {
  0% {
    opacity: 0%;
  }

  100% {
    transform: rotateY(-180deg) scale(-1, 1);
    opacity: 100%;
  }
}

@keyframes fade-away {
  0% {
    opacity: 100%;
  }
  99% {
    opacity: 1%;
  }
  100% {
    opacity: 0%;
    display: none; 
  }
}

@media (min-width: 768px) {
  button {
    padding: 0 40px;
  }
}

